fix: selection on iphone

--- a/modules/finance/src/app/app.component.scss
+++ b/modules/finance/src/app/app.component.scss
@@ -2,3 +2,8 @@
   display: block;
   user-select: none;
 }
+
+* {
+  -webkit-user-select: none;
+  user-select: none;
+}
